[metadata]
name = wfirstdms
author = Space Telescope Science Institute
author_email = help@stsci.edu
license = AURA
license_file = licenses/AURA.rst
url = http://stsci.edu
description = Data management system for WFIRST at STScI
long_description = file: README.rst
long_description_content_type = text/x-rst
edit_on_github = True
github_project = spacetelescope/wfirst-dms

[options]
zip_safe = False
packages = find:
python_requires = >=3.8
setup_requires = setuptools_scm
install_requires =
    astropy


[options.extras_require]
test =
    pytest-astropy
docs =
    sphinx-astropy
    sphinx-automodapi
    sphinx-rtd-theme
    stsci-rtd-theme

[options.package_data]
wfirstdms = data/*

[tool:pytest]
testpaths = "wfirstdms" "docs"
astropy_header = true
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst

[coverage:run]
omit =
    wfirstdms/_astropy_init*
    wfirstdms/conftest.py
    wfirstdms/*setup_package*
    wfirstdms/tests/*
    wfirstdms/*/tests/*
    wfirstdms/extern/*
    wfirstdms/version*
    */wfirstdms/_astropy_init*
    */wfirstdms/conftest.py
    */wfirstdms/*setup_package*
    */wfirstdms/tests/*
    */wfirstdms/*/tests/*
    */wfirstdms/extern/*
    */wfirstdms/version*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_
